--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -11,7 +11,7 @@
 	
 <BorderPane fx:id="mainPane" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
 	<top>
-		<MenuBar>
+		<MenuBar style="-fx-background-color:#f2f2f2;" >
 			<Menu text="File">
 				<MenuItem text="New" onAction="#createSpace"/>
 				<MenuItem text="Open" onAction="#showOpenDialog"/>
@@ -22,9 +22,12 @@
 			</Menu>
 			<Menu text="Format">
 				<CheckMenuItem text="Word Wrap" onAction="#handleWordWrap"/>
-				<MenuItem text="Font" onAction="#showFontDialog"/>
-				<MenuItem text="Color" onAction="#showColorDialog"/>
-			</Menu>
+				<Menu text="Font">
+					<MenuItem text="Style" onAction="#showFontDialog"/>
+					<MenuItem text="Color" onAction="#showColorDialog"/>
+					<MenuItem text="Size" onAction="#showSizeDialog"/>
+				</Menu>
+			</Menu>	
 			<Menu text="Help">
 				<MenuItem text="About Creator" onAction="#handleAbout"/>
 			</Menu>
